--- a/index.html
+++ b/index.html
@@ -87,8 +87,126 @@
                 <video src="images/vid2.mp4" controls poster="images/video 2.jpg" style="width:320px;height:auto;margin:10px;">
                     Your browser does not support the video tag.
                 </video>
+                <video src="images/bee6.mp4" controls poster="images/bee3.jpg" style="width:320px;height:auto;margin:10px;">
+                    Your browser does not support the video tag.
+                </video>
+                <video src="images/bee7.mp4" controls poster="images/be2.jpg" style="width:320px;height:auto;margin:10px;">
+                    Your browser does not support the video tag.
+                </video>
+                <video src="images/bee8.mp4" controls poster="images/bee4.jpg" style="width:320px;height:auto;margin:10px;">
+                    Your browser does not support the video tag.
+                </video>
             </div>
         </section>
+        <section class="faq-section">
+            <h2>Frequently Asked Questions</h2>
+            <div class="faq-list">
+                <div class="faq-item">
+                    <button class="faq-question" aria-expanded="false" aria-controls="faq1">
+                        What areas do you serve?
+                    </button>
+                    <div class="faq-answer" id="faq1" hidden>
+                        We provide drilling and related services across Kenya and neighboring regions. Contact us to confirm service availability in your area.
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <button class="faq-question" aria-expanded="false" aria-controls="faq2">
+                        How long does it take to drill a borehole?
+                    </button>
+                    <div class="faq-answer" id="faq2" hidden>
+                        The duration depends on site conditions and depth, but most boreholes are completed within a few days to a week.
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <button class="faq-question" aria-expanded="false" aria-controls="faq3">
+                        Do you offer maintenance services after installation?
+                    </button>
+                    <div class="faq-answer" id="faq3" hidden>
+                        Yes, we offer regular maintenance, inspections, and repairs for boreholes and pumping systems.
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <button class="faq-question" aria-expanded="false" aria-controls="faq4">
+                        How do I request a quote?
+                    </button>
+                    <div class="faq-answer" id="faq4" hidden>
+                        You can request a quote by filling out our contact form or calling our office directly.
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="project-inquiry-container flex">
+            <div class="project-inquiry-left" data-aos="fade-up">
+                <h4>Ready To Start A New Project? We Want To Hear From You.</h4>
+                <p><strong>Please provide as much information as possible below, and our team will be in touch.</strong></p>
+                <p>For urgent enquiries, call our head office.</p>
+                <div class="office-contact flex align-center">
+                    <div class="office-icon">
+                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M22.6006 6.74947C26.2453 10.4249 26.2453 16.3514 22.6006 20.0268L16.0006 26.6668L9.40057 20.0281C5.7558 16.3528 5.7558 10.4262 9.40057 6.75081C11.1457 4.99055 13.5216 4.00025 16.0003 4C18.479 3.99975 20.8551 4.98957 22.6006 6.74947Z" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M19.7339 12.8149C19.7097 14.8709 18.0276 16.5203 15.9716 16.5041C13.9155 16.488 12.2595 14.8125 12.2675 12.7564C12.2755 10.7003 13.9445 9.03774 16.0006 9.0376C18.0744 9.05008 19.7457 10.7411 19.7339 12.8149Z" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                        </svg>
+                    </div>
+                    <div class="office-address">
+                        <h6>Head Office</h6>
+                        <p>Kenya</p>
+                    </div>
+                </div>
+            </div>
+            <div class="project-inquiry-right" data-aos="fade-up">
+                <form class="contact-form" aria-label="Contact form">
+                    <div class="form-row flex">
+                        <div class="form-col">
+                            <input type="text" name="fname" maxlength="400" placeholder="First Name" required>
+                        </div>
+                        <div class="form-col">
+                            <input type="text" name="lname" maxlength="400" placeholder="Last Name" required>
+                        </div>
+                    </div>
+                    <div class="form-row flex">
+                        <div class="form-col">
+                            <input type="tel" name="phone" maxlength="400" placeholder="Telephone Number">
+                        </div>
+                        <div class="form-col">
+                            <input type="text" name="pcode" maxlength="400" placeholder="Post Code">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <input type="email" name="email" maxlength="400" placeholder="Email Address">
+                    </div>
+                    <div class="form-row flex">
+                        <div class="form-col">
+                            <input type="text" name="cname" maxlength="400" placeholder="Company Name" required>
+                        </div>
+                        <div class="form-col">
+                            <input type="text" name="sname" maxlength="400" placeholder="Service Required" required>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <textarea name="message" rows="7" maxlength="2000" placeholder="Project Description"></textarea>
+                    </div>
+                    <div class="form-row">
+                        <label>
+                            <input type="checkbox" name="accept_terms" value="1" required>
+                            By ticking this box you’re accepting our <a href="#">terms &amp; conditions</a>
+                        </label>
+                    </div>
+                    <div class="form-row">
+                        <input type="submit" value="Submit Message" class="form-submit-btn">
+                    </div>
+                </form>
+            </div>
+        </div>
+        <section class="contact-info-section">
+            <a href="contact.html">Contact us</a>
+            <span style="vertical-align: middle;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" style="vertical-align: middle; margin-right: 6px;" viewBox="0 0 24 24">
+                <path d="M6.62 10.79a15.053 15.053 0 006.59 6.59l2.2-2.2a1 1 0 011.01-.24c1.12.37 2.33.57 3.58.57a1 1 0 011 1v3.5a1 1 0 01-1 1C10.07 22 2 13.93 2 4.5A1 1 0 013 3.5H6.5a1 1 0 011 1c0 1.25.2 2.46.57 3.58a1 1 0 01-.24 1.01l-2.2 2.2z"/>
+            </svg>
+                Call us
+        </section>
+
+
     </main>
      <footer class="main-footer">
             <div class="footer-container">
